# UMC-Ultra-drivers

./: AGENTS.md  ASIO-Ultra.html  ASMRTOP_Studio.cer  ASMRTOP_Studio.pfx  ASMRTOP_V7_ASIO_兼容性验证矩阵.html  AsmrtopIPC_history.txt  BehringerASIO.def  BehringerASIO.rc  CLAUDE.md  CMakeLists.txt  GenerateCert.ps1  Packaging_Process.md  README.md  UMC Ultra使用指南.html  UMC_Ultra_V7.0.0_User_Manual.md  UnlockADAT.ps1  WORK_LOG_V6.2.1.md  admin_dashboard.html  apply_version.ps1  asio_ultra_notes.txt  asmrtap.php  bad_devices.txt  build.ps1  build.py  build_iss_v2.bat  build_log.txt  build_spy5.bat  check_pe.py  clean_and_test.ps1  cmake_log.txt  compatibility_test.html  compile_iss.bat  deploy_local_asio.bat  dev_g.txt  dl.py  do_upload.ps1  drivers_list.txt  extract.cs  find_rol_clsid.py  fix_code_encoding.py  (+64 more)
.agents/workflows/: umc-release.md
ControlPanelWeb/: package-lock.json  package.json  server.js  totalmix_state.json
ControlPanelWeb/public/: index.html  script.js  style.css
Doc/: DEVLOG.md  asio_spy_output.txt  build_err.txt  build_log.txt  cdb_out.txt  cdb_script.txt  project_timeline.html
FancyDriver/msi_extracted_7z/: !AdvtExecuteSequence  !Binary  !ControlEvent  !CustomAction  !Directory  !Feature  !InstallExecuteSequence  !InstallUISequence  !MsiFileHash  !RadioButton  !Registry  !Upgrade  !_Columns  !_StringPool  !_Validation  Binary.pckfi_0IQvb9wMjP5m  Binary.pckfi_R35M8lQTwHIg  Binary.pckfi_UQu1vzBKaJZA  Binary.pckfi_aDgIyD8cqmQX  Binary.tlsetupaddon_exe
FancyDriver/msi_extracted_7z/de-DE.mst/: !Error  !RadioButton
octa_w1011d_v153DL/octa_w1011d_v153DL/: README.txt
official_driver/: msi_strings.txt  studio_strings.txt
official_driver/msi_x64/: !ActionText  !AdminExecuteSequence  !AdminUISequence  !AdvtExecuteSequence  !Binary  !CheckBox  !Component  !Condition  !Control  !ControlCondition  !ControlEvent  !CreateFolder  !CustomAction  !Dialog  !Directory  !Error  !EventMapping  !Feature  !FeatureComponents  !File  !InstallExecuteSequence  !InstallUISequence  !Media  !MsiFileHash  !Property  !RadioButton  !Registry  !RemoveFile  !Shortcut  !TextStyle  !UIText  !Upgrade  !_Columns  !_StringData  !_StringPool  !_Tables  !_Validation  Binary.WixUI_Bmp_Dialog  Binary.pckfi_4PRcYSA1WGTd  Binary.pckfi_50ZPt88qrTMj  (+10 more)
official_driver/msi_x64/de-DE.mst/: !Control  !Property  !_StringData  [5]SummaryInformation
official_driver/named_files/: UMCAudioCplApp.xml  en.txt  tlsetupfx_apps.xml  umc_audio.cat  umc_audio.sys  umc_audio_utf8.inf  umc_audioks.cat
official_driver/studio_msi_x64/: !ActionText  !CheckBox  !ControlCondition  !Dialog  !Error  !EventMapping  !File  !Shortcut  !UIText  !_StringData  Binary.WixUI_Bmp_Banner  Binary.WixUI_Bmp_Dialog  Binary.pckfi_7pbtcFU4i1P9  Binary.pckfi_AC5Xq6fb5rIv  Binary.pckfi_ltukM2MYB0ES  Binary.pckfi_y2nEHxVFcTwn  Binary.tlinstallerca_dll  Icon.app_icon
official_driver/studio_msi_x64/de-DE.mst/: !ActionText  !Dialog  [5]SummaryInformation
official_driver/studio_named_files/: MidiplusUsbAudio_utf8.inf
ref_midiplus/msi_content/: !AdminExecuteSequence  !AdminUISequence  !Component  !Condition  !Control  !CreateFolder  !FeatureComponents  !Media  !Property  !RemoveFile  !TextStyle  !_Tables  Binary.pckfi_EyenpqlvfYFy  Binary.pckfi_Jn7aXf8r1QK0  Binary.pckfi_y6CNuhlfLCJc  Binary.setup_6yxWa86kepp5  Binary.setup_wzXCwDzeWVkq  Binary.tlsetupfx_exe  [5]DigitalSignature  [5]SummaryInformation  cab1.cab
ref_midiplus/msi_content/de-DE.mst/: !UIText  !_StringData  !_StringPool
ref_rme/: liesmich.txt  readme.txt
ref_rme/extracted/: .data  .gfids  .reloc  .text  CERTIFICATE
ref_rme/extracted/.rsrc/: version.txt
ref_rme/rdata_content/: #IDXHDR  #IVB  #STRINGS  #SYSTEM  #TOPICS  #URLSTR  #URLTBL  #WINDOWS  contents.htm  totalmix.hhc
server/: activate.php  generate_keys.php  upload.py
server/web/: activate.php  admin.php  admin_backup.html  asmrtap.php  buy.php  check_order.php  cleaner.php  config.php  db.sql  db_patch.php  heartbeat.php  index.php  install_db.php  matrix.html  notify.php  upload_log.php  verify.php
src/: AsioTargets.h  UMCVersion.h
src/asio/: asio.h  asiosys.h  iasiodrv.h
src/bridge/: AsmrtopIPC.h
src/com/: ClassFactory.cpp  ClassFactory.h  dllmain.cpp
src/driver/: AsioProxy.cpp  AsioProxy.h  AudioBuffer.cpp  AudioBuffer.h  BehringerASIO.cpp  BehringerASIO.cpp.old  BehringerASIO.h  BehringerASIO.h.old  ControlPanelIPC.cpp  ControlPanelIPC.h  DeviceDetector.cpp  DeviceDetector.h  KsAudioStream.cpp  KsAudioStream.h  RoutingMatrix.cpp  RoutingMatrix.h  SharedMemoryBridge.cpp  SharedMemoryBridge.h  TUsbAudioApi.h  TUsbAudioEngine.cpp  TUsbAudioEngine.h  TusbAudioDirect.cpp  TusbAudioDirect.h  WasapiEngine.cpp  WasapiEngine.h  手动覆盖软隔离代码.txt
src/gui/: OptimizerManager.cpp  OptimizerManager.h  UMCControlPanel.cpp  UMCOptimizer.cpp  app.rc  optimizer.rc
src/license/: LicenseManager.h
src/usb/: UsbAudioDevice.cpp  UsbAudioDevice.h  UsbAudioProtocol.h  UsbAudioStream.cpp  UsbAudioStream.h
src/utils/: CrashHandler.h  Logger.h  UMCControlProxy.cpp
tools/: CMakeLists.txt  asio_switch_test.cpp  audio_diag.cpp  audio_diag2.cpp  build_dump.bat  build_stream_test.bat  ds_sine_test.cpp  gen_sine_wav.cpp  ipc_data_check.cpp  ipc_monitor.cpp  ipc_output_test.cpp  ipc_pop_detect.cpp  ipc_quality_test.cpp  rsa_test.cpp  src_diag.cpp  src_quality_test.cpp  usb_descriptor_dump.cpp  usb_stream_test.cpp
tools/diagnostic/: dump_chinfo.cpp  dump_chlist.cpp  dump_chlist2.cpp  dump_out.cpp  ioctl_spy.cpp  ioctl_spy2.cpp  ioctl_spy3.cpp  ioctl_spy4.cpp  ioctl_spy5.cpp  probe_struct.cpp  restore_mode.cpp  test_asio_mode.cpp  test_asio_spy.cpp  test_chcmp.cpp  test_devhandle.cpp  test_diag.cpp  test_dll5.cpp  test_enable.cpp  test_evtmon.cpp  test_evtmon2.cpp  test_fix.cpp  test_full5.cpp  test_hook_out.cpp  test_ioctl.cpp  test_ks_create.cpp  test_ks_discover.cpp  test_ks_pin.cpp  test_ks_pins.cpp  test_load.cpp  test_loopback.cpp  test_mapaddr.cpp  test_mapret.cpp  test_official2.cpp  test_official_sine.cpp  test_outdiag.cpp  test_sine.cpp  test_sine2.cpp  test_sine3.cpp  test_sine4.cpp  test_sine5.cpp  (+19 more)
(+36 files in other folders)
